[package]
name = "ainoio-agent"
version = "1.0.0"
authors = ["Olli Aalto <olli.aalto@unikie.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Aino.io agent"
repository = "https://github.com/Aino-io/aino-agent-rust"
homepage = "https://aino.io"
readme = "README.md"
keywords = ["integrations"]

[dependencies]
serde = "1.0.105"
serde_derive = "1.0.105"
serde_json = "1.0.48"
surf = "1.0.3"
futures = "0.3.4"
strum = "0.18.0"
strum_macros = "0.18.0"
config = "0.10.1"
lazy_static = "1.4.0"
